# hi-haddock-lexer

./: .gitignore  hi-haddock-lexer.cabal
src/: Alex.x  HaddockLexer.hs
test/: HaddockLexerSpec.hs  LexerSpec.hs
