name:                hi-haddock-lexer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hi-haddock-lexer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HaddockLexer
  build-depends:       base >= 4.7 && < 5
                     , ghc
                     , parsec
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       HaddockLexerSpec
  build-depends:       base
                     , ghc
                     , hi-haddock-lexer
                     , hspec
                     , QuickCheck
                     , parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hi-haddock-lexer
